Remove color:black from table {} in skins (bug 28422) + small fixes * Remove color:black from table {} in skins (bug 28422) * Add color:black to .wikitable (since it has a background-color) * Update comment about CSS3 'word-wrap:break-word' support in Gecko * Remove line-break in mediawiki.js (it's ~ 90 chars, acceptable)

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -299,6 +299,7 @@ table.wikitable {
 	background: #f9f9f9;
 	border: 1px #aaa solid;
 	border-collapse: collapse;
+	color: black;
 }
 .wikitable th, .wikitable td {
 	border: 1px #aaa solid;
